--- a/hsccinfo/views/bdpahistory.ejs
+++ b/hsccinfo/views/bdpahistory.ejs
@@ -5,10 +5,18 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1> Welocme to BDPA 2025</h1>
+    <h1> BDPA History </h1>
   
-    <ul>
-      
-    </ul>
+    <ol>
+  <li> Founders of BDPA: Earl A. Pace Jr. and David Wimberly </li> 
+  <li> Foundeing year of BDPA: 1975 </li>  
+  <li> First chapters if BDPA: Philidelphia, Washington DC, and Cleveland </li>
+  <li> First BDPA Conference year and venue: </li>
+  <li> First HSCC year and venue: </li>
+  <li> Most recent venue and winner of HSCC: Atlanta & Atlanta </li>
+  <li> Current national president and VP: Perry Carter (President) & Eric Ejiofor (VP) </li>
+  <li> Current chapter president and VP: Rosemary Smith (President) & Lynette McNeely (VP)  </li>
+  <li> Year and refounder of Milwaukee chapter reactivation: 2013, Carmen Giles </li> 
+    </ol>
   </body>
 </html>
