--- a/hsccinfo/views/index.ejs
+++ b/hsccinfo/views/index.ejs
@@ -3,11 +3,23 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <style>
+      h2 {color:rgb(226, 7, 255)}
+    </style>
   </head>
   <body>
+    <!-- This is our horizontal navbar -->
+    <ul class="menu">
+      <li><a href="/"> <image src="images/bdpalogo.png" height="25">  </a></li>
+      <li><a href="/"> Home </a></li>
+      <li><a href="/bdpahistory"> BDPA History </a></li>
+      <li><a href="#"> Sample Form </a></li>
+    </ul>
+    <!-- End navbar -->
+     <br><br><br>
     <h1> Welocme to BDPA 2025</h1>
     <h2> MY NAME IS CORTEZ!!!</h2>
-    <p> This page will be an intro to the HSCC program</p>
+    <p style="color:rgb(177, 10, 10)"> This page will be an intro to the HSCC program</p>
     <h2> Hyperlinks </h2>
     <ul>
       <li> BDPA National <a href="http://www.bdpa.org"> LINK </a> </li>
