--- a/hsccinfo/views/bdpahistory.ejs
+++ b/hsccinfo/views/bdpahistory.ejs
@@ -5,8 +5,17 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+     <!-- This is our horizontal navbar -->
+     <ul class="menu">
+      <li><a href="/"> <image src="images/bdpalogo.png" height="25">  </a></li>
+      <li><a href="/"> Home </a></li>
+      <li><a href="/bdpahistory"> BDPA History </a></li>
+      <li><a href="#"> Sample Form </a></li>
+    </ul>
+    <!-- End navbar -->
+     <br><br><br>
     <h1> BDPA History </h1>
-  
+  <img src="images/bdpalogo.png" alt="BDPA logo">
     <ol>
   <li> Founders of BDPA: Earl A. Pace Jr. and David Wimberly </li> 
   <li> Foundeing year of BDPA: 1975 </li>  
