--- a/hsccinfo/views/index.ejs
+++ b/hsccinfo/views/index.ejs
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <style>
-      h2 {color:rgb(226, 7, 255)}
-    </style>
-  </head>
+  <!-- head partial gets included here -->
+  <%- include('./partials/head') -%>
   <body>
-    <!-- This is our horizontal navbar -->
-    <ul class="menu">
-      <li><a href="/"> <image src="images/bdpalogo.png" height="25">  </a></li>
-      <li><a href="/"> Home </a></li>
-      <li><a href="/bdpahistory"> BDPA History </a></li>
-      <li><a href="#"> Sample Form </a></li>
-    </ul>
-    <!-- End navbar -->
-     <br><br><br>
-    <h1> Welocme to BDPA 2025</h1>
-    <h2> MY NAME IS CORTEZ!!!</h2>
-    <p style="color:rgb(177, 10, 10)"> This page will be an intro to the HSCC program</p>
+    <!-- Include menu here -->
+    <%- include('./partials/menu') -%>
+
+    <!-- Basic Intro -->
+    <h1> Welcome to BDPA 2025 </h1>
+    <h2> My name is Cortez Sutton </h2>
+    <p style="color:rgb(62, 0, 128); background-color:rgb(109, 33, 202)"> This page will be an intro to the HSCC program </p>
     <h2> Hyperlinks </h2>
+    <!-- Unordered list of links -->
     <ul>
-      <li> BDPA National <a href="http://www.bdpa.org"> LINK </a> </li>
-      <li> BDPA Milwaukee <a href="http://www.bdpamke.org"> LINK </a> </li>
-      <li> W3schools <a href="http://www.w3schools.com"> LINK </a> </li>
-<li> BDPA History <a href="/bdpahistory"> LINK </a></li>
+      <li> BDPA National <a href="http://www.bdpa.org"&gt; LINK </a> </li>
+      <li> BDPA Milwaukee <a href="http://www.bdpamke.org"&gt; LINK </a> </li>
+      <li> W3Schools <a href="http://www.w3schools.com"&gt; LINK </a> </li>
+      <li> BDPA History <a href="/bdpahistory"> LINK </a> </li>
 
     </ul>
+    <!-- End of unordered list -->
   </body>
 </html>
